--- a/src/component/resizable.css
+++ b/src/component/resizable.css
@@ -9,13 +9,20 @@
     height: 10px;
     width: 100%;
     cursor: row-resize;
-    background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAA);
+    background: white;
+  background-image: radial-gradient(black 1px, transparent 0);
+  background-size: 40px 40px;
+  background-position: -19px -19px;
 }
 
 .react-resizable-handle-e {
     width: 10px;
     height: 100%;
     cursor: col-resize;
+    background: white;
+  background-image: radial-gradient(black 1px, transparent 0);
+  background-size: 40px 40px;
+  background-position: -19px -19px;
 
 }
 
